--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,2 +1,22 @@
-<h1>Public::Homes#adout</h1>
-<p>Find me in app/views/public/homes/adout.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col mt-3 text-center">
+      <h3>ここは「あなたのジム」「あなたのトレーニング」を共有するサイト！</h3>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col my-3 text-center">
+      <%= image_tag "about_gym_image" %>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-6 text-center mb-3">
+      <h3>会員様ログインは<%= link_to"こちら", new_member_session_path %></h3>
+      <h3>ご新規会員登録は<%= link_to"こちら", new_member_registration_path %></h3>
+    </div>
+    <div class="col-6 text-center">
+      <h3>管理者ログインは<%= link_to"こちら", new_admin_session_path %></h3>
+      <h3>管理者新規登録は<%= link_to"こちら", new_admin_registration_path %></h3>
+    </div>
+  </div>
+</div>
