--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,2 +1,10 @@
-<h1>Admin::Homes#top</h1>
-<p>Find me in app/views/admin/homes/top.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-8 my-4">
+      <h1>
+      <%= current_admin.gym_name %>
+      </h1>
+      <%= link_to "情報編集", 
+    </div>
+  </div>
+</div>
