--- a/app/views/admin/registrations/new.html.erb
+++ b/app/views/admin/registrations/new.html.erb
@@ -1,29 +1,45 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "admin/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container">
+  <div class="row my-3">
+    <div class="col-4 d-flex align-items-center justify-content-center">
+    <h2>管理者新規登録</h2>
+    </div>
+    <div class="col-4">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "admin/shared/error_messages", resource: resource %>
+      <div class="field mb-4">
+        <%= f.label :メールアドレス %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+      <div class="field mb-4">
+        <%= f.label :パスワード %>
+        <% if @minimum_password_length %>
+        <em>(<%= @minimum_password_length %>文字以内)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password" %>
+      </div>
+      <div class="field mb-4">
+        <%= f.label :パスワード（確認） %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class:"mb-4" %>
+      </div>
+    </div>
+    <div class="col-4">
+      <div class="field mb-4">
+        <%= f.label :店舗名 %><br />
+        <%= f.text_field :gym_name %>
+      </div>
+      <div class="field mb-5">
+        <%= f.label :店舗画像 %><br />
+        <%= f.file_field :gym_image, accept: "image/*" %>
+      </div>
+      <div class="actions">
+        <%= f.submit "Sign up",class:"mb-1 btn btn-success" %>
+      </div>
+      <% end %>
+      <%= render "admin/shared/links" %>
+    </div>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
 
-<%= render "admin/shared/links" %>
