--- a/app/views/admin/admins/edit.html.erb
+++ b/app/views/admin/admins/edit.html.erb
@@ -1,15 +1,30 @@
 <div class="container">
-  <div class="row">
-    <h1>店舗情報編集</h1>
-  </div>
-  <div class="row">
+  <div class="row my-3">
+    <div class="col-4 d-flex align-items-center justify-content-center">
     <%= form_with model: @admin do |f| %>
-    <h4>メールアドレス</h4>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-    <h4>店舗名</h4>
-    <%= f.text_field :gym_name %>
-    <h4>店舗画像</h4>
-    <%= f.text_field :gym_name %>
-    <% end %>
+      <h1>店舗情報編集</h1>
+    </div>
+    <div class="col-4">
+      <div class="field mb-4">
+        <h4>メールアドレス</h4>
+        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+      <div class="field mb-4">
+        <h4>店舗名</h4>
+        <%= f.text_field :gym_name %>
+      </div>
+      <div class="field mb-4">
+        <h4>店舗画像</h4>
+        <%= f.file_field :gym_image, accept: "image/*" %>
+      </div>
+      <div class="field mb-4">
+        <%= f.submit "変更を保存", class:"btn btn-success" %>
+      </div>
+      <% end %>
+    </div>
+      <div class="col-4">
+        <p>現在の店舗画像</p>
+        <%= image_tag @admin.gym_image %>
+      </div>
   </div>
 </div>
