--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,13 +26,13 @@
       <ul class="row list-unstyled">
       <% if admin_signed_in? %>
       <li>
-        <%= link_to "マイページ", admin_admin_path(current_admin), class:"btn btn-dark mx-2" %>
+        <%= link_to "マイページ", admin_path(current_admin), class:"btn btn-dark mx-2" %>
       </li>
       <li>
-        <%= link_to "マシン一覧", admin_machines_path, class:"btn btn-dark mx-2" %>
+        <%= link_to "マシン一覧", machines_path, class:"btn btn-dark mx-2" %>
       </li>
       <li>
-        <%= link_to "投稿一覧", admin_posts_path, class:"btn btn-dark mx-2" %>
+        <%= link_to "部位一覧", new_site_path, class:"btn btn-dark mx-2" %>
       </li>
       <li>
         <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class:"btn btn-dark mx-2" %>
