[add]machine/new/index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
         <%= link_to "マイページ", admin_path(current_admin), class:"btn btn-dark mx-2" %>
       </li>
       <li>
-        <%= link_to "マシン一覧", machines_path, class:"btn btn-dark mx-2" %>
+        <%= link_to "マシン一覧", new_machine_path, class:"btn btn-dark mx-2" %>
       </li>
       <li>
         <%= link_to "部位一覧", new_site_path, class:"btn btn-dark mx-2" %>
