--- a/app/views/admin/machines/edit.html.erb
+++ b/app/views/admin/machines/edit.html.erb
@@ -1,2 +1,30 @@
-<h1>Admin::Machines#edit</h1>
-<p>Find me in app/views/admin/machines/edit.html.erb</p>
+<div class="container">
+  <div class="row my-3">
+    <div class="col-4 d-flex align-items-center justify-content-center">
+    <%= form_with model: @machine do |f| %>
+      <h1>マシン情報編集</h1>
+    </div>
+    <div class="col-4">
+      <div class="field mb-4">
+        <h4>マシン名</h4>
+        <%= f.text_field :machine_name %>
+      </div>
+      <div class="field mb-4">
+        <h4>説明</h4>
+        <%= f.text_field :explanation %>
+      </div>
+      <div class="field mb-4">
+        <h4>マシン画像</h4>
+        <%= f.file_field :machine_image, accept: "image/*" %>
+      </div>
+      <div class="field mb-4">
+        <%= f.submit "変更を保存", class:"btn btn-success" %>
+      </div>
+      <% end %>
+    </div>
+      <div class="col-4">
+        <p>現在のマシン画像</p>
+        <%= image_tag @machine.machine_image %>
+      </div>
+  </div>
+</div>
