--- a/app/views/admin/machines/new.html.erb
+++ b/app/views/admin/machines/new.html.erb
@@ -1,14 +1,18 @@
 <div class="container">
-  <div class="row my-5">
-    <div class="col-6 d-flex align-items-center justify-content-center">
-      <% if @machine.errors.any? %>
-      <%= @machine.errors.count %>件のエラーが発生しました
-      <ul>
-        <% @machine.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-        <% end %>
-      </ul>
+  <div class="row mt-1">
+    <div class="col d-flex align-items-center justify-content-center">
+    <% if @machine.errors.any? %>
+    <%= @machine.errors.count %>件のエラーが発生しました
+    <ul>
+      <% @machine.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
       <% end %>
+    </ul>
+    <% end %>
+    </div>
+  </div>
+  <div class="row my-3">
+    <div class="col d-flex align-items-center justify-content-center">
       <%= form_with model: @machine do |f| %>
         <p>マシン名</p>
         <%= f.text_field :machine_name, class:"mb-3" %>
@@ -18,11 +22,10 @@
         <%= f.text_area :explanation, class:"mb-3" %>
         <p class="mt-3">マシン画像</p>
         <%= f.file_field :machine_image, accept: "image/*" ,class:"mb-3" %>
-        <%= f.submit "登録", class:"ml-2 btn btn-success" %>
+        <%= f.submit "登録", class:"ml-1 btn btn-success" %>
       <% end %>
-
     </div>
-    <div class="col-6">
+    <div class="col-6 ">
       <h4>マシン一覧</h4>
       <table class="table table-striped mt-4">
         <thead>
@@ -36,10 +39,10 @@
         <tbody>
           <% @machines.each do |machine| %>
           <tr>
-            <td><%= link_to machine.machine_name, machine_path(machine), class:"text-dark stretched-link" %></td>
+            <td><%= machine.machine_name %></td>
             <td><%= machine.site.site_name %></td>
             <td><%= machine.machine_status_i18n %></td>
-            <td><%= link_to "編集", edit_machine_path(machine), class:"btn btn-primary" %></td>
+            <td><%= link_to "詳細", machine_path(machine), class:"btn btn-primary" %></td>
           </tr>
           <% end %>
         </tbody>
