--- a/app/views/admin/sites/new.html.erb
+++ b/app/views/admin/sites/new.html.erb
@@ -1,9 +1,19 @@
 <div class="container">
+  <div class="row-mt-1">
+    <% if @site.errors.any? %>
+    <%= @site.errors.count %>件のエラーが発生しました
+    <ul>
+      <% @site.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+    <% end %>
+  </div>
   <div class="row my-5">
     <div class="col-6">
       <%= form_with model: @site do |f| %>
         <h4>部位登録</h4>
-          <%= f.text_field :site_name%>
+          <%= f.text_field :site_name %>
           <%= f.submit "登録", class:"ml-2 btn btn-success" %>
       <% end %>
       <table class="table table-striped mt-4">
@@ -13,18 +23,19 @@
             <th></th>
           </tr>
         </thead>
-        <% @sites.each do |site| %>
         <tbody>
+        <% @sites.each do |site| %>
           <tr>
             <td><%= site.site_name %></td>
             <td><%= link_to "削除" ,site_path(site), method: :delete, class:"btn btn-danger" %></td>
           </tr>
-        </tbody>
         <% end %>
+        </tbody>
       </table>
         <%= paginate @sites %>
     </div>
     <div class="col-6 d-flex align-items-center justify-content-center">
       <%= image_tag "site-image" %>
     </div>
+  </div>
 </div>
