--- a/app/views/admin/registrations/new.html.erb
+++ b/app/views/admin/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row my-3">
     <div class="col-4 d-flex align-items-center justify-content-center">
-    <h2>管理者新規登録</h2>
+      <h2>管理者新規登録</h2>
     </div>
     <div class="col-4">
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -32,10 +32,10 @@
         <%= f.file_field :gym_image, accept: "image/*" %>
       </div>
       <div class="actions">
-        <%= f.submit "Sign up",class:"mb-1 btn btn-success" %>
+        <%= f.submit "Sign up",class:"mb-1 btn btn-success mr-3" %>
+        <%= render "admin/shared/links" %>
       </div>
       <% end %>
-      <%= render "admin/shared/links" %>
     </div>
   </div>
 </div>
