--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -12,7 +12,7 @@
   <div class="row">
     <div class="col-6 text-center mb-3">
       <h3>会員様ログインは<%= link_to"こちら", new_member_session_path %></h3>
-      <h3>ご新規会員登録は<%= link_to"こちら", new_member_registration_path %></h3>
+      <h3>新規会員登録は<%= link_to"こちら", new_member_registration_path %></h3>
     </div>
     <div class="col-6 text-center">
       <h3>管理者ログインは<%= link_to"こちら", new_admin_session_path %></h3>
