--- a/app/views/admin/registrations/new.html.erb
+++ b/app/views/admin/registrations/new.html.erb
@@ -1,11 +1,13 @@
 <div class="container">
   <div class="row my-3">
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+      <%= render "admin/shared/error_messages", resource: resource %>
+  </div>
+  <div class="row my-3">
     <div class="col-4 d-flex align-items-center justify-content-center">
       <h2>管理者新規登録</h2>
     </div>
     <div class="col-4">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "admin/shared/error_messages", resource: resource %>
       <div class="field mb-4">
         <%= f.label :メールアドレス %><br />
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
