--- a/app/views/public/members/edit.html.erb
+++ b/app/views/public/members/edit.html.erb
@@ -1,21 +1,21 @@
 <div class="container">
   <div class="row my-3">
     <div class="col-4 d-flex align-items-center justify-content-center">
-      <h1>店舗情報編集</h1>
+    <%= form_with model: @member, url: public_member_path(@member.id), method: :patch do |f| %>
+      <h1>会員情報編集</h1>
     </div>
-    <%= form_with model: @admin, url: admin_path(@admin.id), method: :patch do |f| %>
     <div class="col-4">
       <div class="field mb-4">
         <h4>メールアドレス</h4>
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
       <div class="field mb-4">
-        <h4>店舗名</h4>
-        <%= f.text_field :gym_name %>
+        <h4>ユーザー名</h4>
+        <%= f.text_field :name %>
       </div>
       <div class="field mb-4">
-        <h4>店舗画像</h4>
-        <%= f.file_field :gym_image, accept: "image/*" %>
+        <h4>アイコン</h4>
+        <%= f.file_field :icon, accept: "image/*" %>
       </div>
       <div class="field mb-4">
         <%= f.submit "変更を保存", class:"btn btn-success" %>
@@ -23,10 +23,9 @@
       <% end %>
     </div>
       <div class="col-4">
-        <h4>現在の店舗画像</h4>
-      <% if @admin.gym_image.attached? %>
-        <%= image_tag @admin.gym_image, size: "50×50" %>
-      <% else %> 
+        <% if @member.icon.attached? %>
+        <%= image_tag @member.icon %>
+      <% else %>
         <%= image_tag "no_image", size:"200×200" %>
       <% end %>
       </div>
