--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,11 +1,13 @@
 <div class="container">
   <div class="row my-3">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= render "public/shared/error_messages", resource: resource %>
+  </div>
+  <div class="row my-3">
     <div class="col-6 d-flex align-items-center justify-content-center">
       <h2>新規会員登録</h2>
     </div>
     <div class="col-6">
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "public/shared/error_messages", resource: resource %>
       <div class="field">
         <%= f.label :ユーザーネーム %><br />
         <%= f.text_field :name, class:"mb-4" %>
