--- a/app/views/admin/admins/edit.html.erb
+++ b/app/views/admin/admins/edit.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row my-3">
-    <div class="col-4 d-flex align-items-center justify-content-center">
+    <div class="col-3 d-flex align-items-center justify-content-center">
       <h1>店舗情報編集</h1>
     </div>
+    <div class="col-4 d-flex align-items-center justify-content-center">
     <%= form_with model: @admin, url: admin_path(@admin.id), method: :patch do |f| %>
-    <div class="col-4">
       <div class="field mb-4">
         <h4>メールアドレス</h4>
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
@@ -19,16 +19,12 @@
       </div>
       <div class="field mb-4">
         <%= f.submit "変更を保存", class:"btn btn-success" %>
+      <% end %>
       </div>
-      <% end %>
     </div>
-      <div class="col-4">
+      <div class="col-5">
         <h4>現在の店舗画像</h4>
-      <% if @admin.gym_image.attached? %>
-        <%= image_tag @admin.gym_image, size: "50×50" %>
-      <% else %> 
-        <%= image_tag "no_image", size:"200×200" %>
-      <% end %>
+      <%= image_tag @admin.get_gym_image(400,400) %>
       </div>
   </div>
 </div>
