--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -1,11 +1,7 @@
 <div class="container">
   <div class="row my-5">
     <div class="col-6 d-flex align-items-center justify-content-center">
-      <% if @member.icon.attached? %>
-        <%= image_tag @member.icon %>
-      <% else %>
-        <%= image_tag "no_image", size:"200×200" %>
-      <% end %>
+      <%= image_tag @member.get_icon(400,400) %>
     </div>
     <div class="col-6">
     <table class="table">
@@ -19,8 +15,7 @@
       </tr>
     </table>
       <%= link_to "会員情報編集", edit_public_member_path(@member.id), class:"btn btn-primary" %>
-      <!--<= link_to "my口コミ一覧", public_posts_path, class:"btn btn-primary mx-5" %>-->
-      <!--<= link_to "myトレーニング一覧", edit_public_member_path(@member), class:"btn btn-primary" %>-->
+      <%= link_to "myトレーニング一覧", public_posts_path(@member), class:"btn btn-primary" %>
     </div>
   </div>
 </div>
