[add]public/gym/index.machine_index

--- a/app/views/admin/admins/show.html.erb
+++ b/app/views/admin/admins/show.html.erb
@@ -4,7 +4,7 @@
       <h1>
         <%= @admin.gym_name %></br>
         <%= @admin.email %></br>
-      <%= link_to "店舗情報編集", edit_admin_path(@admin), class:"btn btn-success" %>
+      <%= link_to "店舗情報編集", edit_admin_path(@admin), class:"btn btn-primary" %>
       </h1>
     </div>
     <div class="col-6 my-4 d-flex align-items-center justify-content-center">
