--- a/app/views/admin/machines/new.html.erb
+++ b/app/views/admin/machines/new.html.erb
@@ -12,19 +12,6 @@
     </div>
   </div>
   <div class="row my-3">
-    <div class="col d-flex align-items-center justify-content-center">
-      <%= form_with model: @machine do |f| %>
-        <p>マシン名</p>
-        <%= f.text_field :machine_name, class:"mb-3" %>
-        <p>部位</p>
-        <%= f.collection_select(:site_id, Site.all, :id,:site_name,prompt: "選択してください") %>
-        <p class="mt-3">説明</p>
-        <%= f.text_area :explanation, class:"mb-3" %>
-        <p class="mt-3">マシン画像</p>
-        <%= f.file_field :machine_image, accept: "image/*" ,class:"mb-3" %>
-        <%= f.submit "登録", class:"ml-1 btn btn-success" %>
-      <% end %>
-    </div>
     <div class="col-6 ">
       <h4>マシン一覧</h4>
       <table class="table table-striped mt-4">
@@ -47,6 +34,19 @@
           <% end %>
         </tbody>
       </table>
+    </div>
+    <div class="col-6 d-flex align-items-center justify-content-center">
+      <%= form_with model: @machine do |f| %>
+        <p>マシン名</p>
+        <%= f.text_field :machine_name, class:"mb-3" %>
+        <p>部位</p>
+        <%= f.collection_select(:site_id, Site.all, :id,:site_name,prompt: "選択してください") %>
+        <p class="mt-3">説明</p>
+        <%= f.text_area :explanation, class:"mb-3" %>
+        <p class="mt-3">マシン画像</p>
+        <%= f.file_field :machine_image, accept: "image/*" ,class:"mb-3" %>
+        <%= f.submit "登録", class:"ml-1 btn btn-success" %>
+      <% end %>
     </div>
   </div>
 </div>
