--- a/app/views/public/members/show.html.erb
+++ b/app/views/public/members/show.html.erb
@@ -15,7 +15,7 @@
       </tr>
     </table>
       <%= link_to "会員情報編集", edit_public_member_path(@member.id), class:"btn btn-primary" %>
-      <%= link_to "myトレーニング一覧", public_posts_path(@member), class:"btn btn-primary" %>
+      <%= link_to "my投稿一覧", public_posts_path, class:"btn btn-warning" %>
     </div>
   </div>
 </div>
