--- a/app/views/public/gyms/show.html.erb
+++ b/app/views/public/gyms/show.html.erb
@@ -3,7 +3,7 @@
     <h1><%= @gym.gym_name %></h1>
   </div>
   <div class="row mb-5">
-    <div class="col-6">
+    <div class="col-6 d-flex align-items-center justify-content-center">
       <%= image_tag @gym.get_gym_image(500,500) %>
     </div>
     <div class="col-6">
