--- a/app/views/public/gyms/show.html.erb
+++ b/app/views/public/gyms/show.html.erb
@@ -13,7 +13,7 @@
         <h4 class="my-3 border-bottom border-dark">登録マシン台数</h4>
         <h5 class="mb-5"><%= @gym.machines.count %>台　<%= link_to "設置マシン一覧を見る", machine_index_public_gym_path %></h5>
         <h4 class="my-3 border-bottom border-dark">このジムのマシンを使用した投稿</h4>
-        <!--<h5 class="mb-5">件　<= link_to "投稿一覧を見る", public_machines_path %></h5>-->
+        <h5 class="mb-5"><%= @gym.posts.count %>件</h5>
       </div>
     </div>
   </div>
