--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,7 +1,9 @@
 <div class="card-list-container py-5">
   <% @posts.each do |post| %>
   <div class="card w-50 mx-auto shadow-lg my-5">
+    <%= link_to public_post_path(post) do %>
       <%= image_tag post.get_post_image(500,500),class:"card-img-top" %>
+    <% end %>
     <div class="card-body">
       <div class="row">
         <div class="col-3 d-flex align-items-center justify-content-center">
@@ -11,7 +13,7 @@
           <p>使用マシン：<%= post.machine.machine_name %></p>
           <p><%= post.sentence %></p>
           <p>ジム：<%= link_to post.machine.admin.gym_name, public_gym_path(post.machine.admin.id) %></p>
-          <p><i class="fa-solid fa-user"></i><%= post.member.name %> | コメント</p>
+          <p><i class="fas fa-user"></i> <%= post.member.name %> | コメント</p>
         </div>
       </div>
     </div>
