--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -13,7 +13,7 @@
           <p>使用マシン：<%= post.machine.machine_name %></p>
           <p><%= post.sentence %></p>
           <p>ジム：<%= link_to post.machine.admin.gym_name, public_gym_path(post.machine.admin.id) %></p>
-          <p><i class="fas fa-user"></i> <%= post.member.name %> | コメント</p>
+          <p><i class="fas fa-user"></i> <%= post.member.name %> | コメント <%= post.comments.count %>件 | いいね件</p>
         </div>
       </div>
     </div>
