--- a/app/views/admin/machines/new.html.erb
+++ b/app/views/admin/machines/new.html.erb
@@ -40,7 +40,7 @@
         <p>マシン名</p>
         <%= f.text_field :machine_name, class:"mb-3" %>
         <p>部位</p>
-        <%= f.collection_select(:site_id, Site.all, :id,:site_name,prompt: "選択してください") %>
+    <%= f.collection_select(:site_id, current_admin.sites, :id,:site_name,prompt: "選択してください") %>
         <p class="mt-3">説明</p>
         <%= f.text_area :explanation, class:"mb-3" %>
         <p class="mt-3">マシン画像</p>
