--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,5 +1,15 @@
 <div class="container">
   <div class="row mt-5">
+    <% if @post.errors.any? %>
+    <%= @post.errors.count %>件のエラーが発生しました。
+    <ul>
+      <% @post.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+    <% end %>
+  </div>
+  <div class="row mt-5">
     <div class="col-5">
       <h1>トレーニング投稿</h1>
     </div>
