--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -49,7 +49,7 @@
           <% end %>
         <% end %>
         <% if current_member == @post.member %>
-            <%= link_to "投稿を削除する", public_post_path(post), method: :delete, class:"btn btn-danger mt-2 ml-2" %>
+          <%= link_to "投稿を削除する", public_post_path(@post), method: :delete, class:"btn btn-danger mt-2" %>
         <% end %>
       </div>
     </div>
