--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -6,7 +6,7 @@
   </div>
   <div class="row">
     <div class="col my-3 text-center">
-      <%= image_tag "about_gym_image" %>
+      <%= image_tag "about_gym_image.jpg" %>
     </div>
   </div>
   <div class="row">
