--- a/app/views/admin/sites/new.html.erb
+++ b/app/views/admin/sites/new.html.erb
@@ -35,7 +35,7 @@
         <%= paginate @sites %>
     </div>
     <div class="col-6 d-flex align-items-center justify-content-center">
-      <%= image_tag "site-image" %>
+      <%= image_tag "site-image.jpg" %>
     </div>
   </div>
 </div>
